--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,146 @@
-h3 {
-  font-family: "Pacifico", cursive;
+* {
+  font-family: "Raleway", sans-serif;
+}
+
+.app {
+  background: #e7eff6;
+}
+
+nav {
+  height: 3rem;
+  background: #63ace5;
+}
+
+.icon {
+  padding-right: 12px;
+}
+
+.search:focus {
+  outline: none;
+  box-shadow: none;
+  border: 1px solid black;
+}
+
+.submit {
+  background-color: #424549;
+  color: #fff;
+}
+
+.submit:hover {
+  cursor: pointer;
+  background-color: #28292b;
+  color: #fff;
+}
+
+.submit:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.clear {
+  background-color: #ff7878;
+}
+
+.clear:hover {
+  cursor: pointer;
+  background-color: #e65050;
+}
+
+.items {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 1.5rem;
+  height: 220px;
+  padding-bottom: 25px;
+}
+
+.recipe-card {
+  padding: 15px;
+  box-shadow: 5px 6px 20px -1px rgba(0, 0, 0, 0.58);
+  background-color: #adcbe3;
+  position: relative;
+  border-radius: 2px;
+}
+
+.upper {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  text-align: center;
+}
+
+.upper span {
+  font-style: italic;
+}
+
+.upper ul {
+  list-style-type: circle;
+  list-style-position: inside;
+  text-align: left;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  height: 160px;
+  width: 160px;
+  box-shadow: 2px 2px 15px 5px rgba(0, 0, 0, 0.32);
+  border-radius: 2px;
+  border: 1px solid #021a40;
+}
+
+.lower {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 10px 0;
+}
+
+.lower p {
+  font-size: 20px;
+  text-align: center;
+  text-decoration: underline;
+}
+
+h4 {
+  font-weight: bold;
+}
+
+.lower ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin: 0;
+  padding: 0;
+}
+
+.recipe-card button {
+  border: none;
+  background-color: #2a4d69;
+  width: 150px;
+  border-radius: 2px;
+  margin: auto;
+  margin-top: 15px;
+  padding: 8px 0;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+button:hover {
+  background-color: #234158;
+}
+
+a {
+  color: white;
+  font-weight: 400;
+  padding: 20px 0;
+}
+
+a:focus,
+a:hover {
+  text-decoration: none;
+  color: white;
+  font-style: italic;
 }
