--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,20 @@
   display: flex;
   flex-direction: column;
 }
+
+.footer {
+  display: flex;
+  justify-content: center;
+  height: 3.5rem;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+}
+
+main {
+  flex: 1 0 auto;
+}
+/* 
 .main-container {
   max-width: 80%;
   margin: auto;
@@ -35,16 +49,6 @@ nav h3 {
 nav i {
   font-size: 35px;
   color: #fff;
-}
-
-.footer {
-  background-color: #63ace5;
-  display: flex;
-  justify-content: center;
-  height: 3.5rem;
-  margin: 0;
-  padding: 0;
-  align-items: center;
 }
 
 .version {
@@ -254,4 +258,50 @@ a:hover {
     width: 90%;
     margin: auto;
   }
+} */
+
+.search-row {
+  margin-bottom: 1rem;
+}
+
+nav p {
+  padding-top: 0;
+  margin-top: 0;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
+}
+
+nav {
+  margin-bottom: 2rem;
+}
+
+button {
+  width: 100%;
+}
+
+.opening-card {
+  margin-top: 5rem;
+  margin-bottom: 7rem;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+/* label color */
+.input-field label {
+  color: #000;
+}
+/* label focus color */
+.input-field input[type="search"]:focus + label {
+  color: black !important;
+  background-color: transparent;
+}
+
+/* label underline focus color */
+.input-field input:focus {
+  border-bottom: 1px solid black !important;
+  box-shadow: 0 1px 0 0 !important;
+}
+
+/* icon prefix focus color */
+.input-field .prefix.active {
+  color: black !important;
 }
